# GVga

./: CMakeLists.txt  README.md  gfx_2bpp.c
apps/a0_hello_world/: CMakeLists.txt  vmake.sh
apps/a0_hello_world/src/: main.c
apps/a1_screensaver/: CMakeLists.txt  vmake.sh
apps/a1_screensaver/src/: main.c
apps/b0_fonts/: CMakeLists.txt  vmake.sh
apps/b0_fonts/src/: main.c
apps/b1_text_mode/: vmake.sh
apps/b1_text_mode/src/: main.c
apps/b2_alt_text_mode/: CMakeLists.txt  vmake.sh
apps/b2_alt_text_mode/src/: main.c
libs/: CMakeLists.txt
libs/fonts/: apple_ii.h  apple_ii_pico.h  c16.h  c16_pico.h  c64.h  c64_pico.h  c65-caff.h  convert_all.sh  font2h.js  package-lock.json  package.json  pet-1.h  pet-1_pico.h  pet-2.h  pet-2_pico.h  superpet.h  superpet_pico.h  template-main.js  vic20.h  vic20_pico.h
libs/gfx/: gfx.c  gfx.h  gfx_1bpp.c  gfx_2bpp.c  gfx_4bpp.c  gfx_8bpp.c  ls7447.h
libs/gvga/: _gvga.h  _gvga_font_data.h  _gvga_palette.c  _gvga_scanlines.c  gmem.c  gmem.h  gvga.c  gvga.h  gvga_font.c  gvga_font.h
scanvideo_minimal/: CMakeLists.txt  scanvideo_minimal.c  vmake.sh
